# ambient_viz

./: .gitignore  20251006_arrangement_1.timeline.json  AGENTS.md  AGENT_MEMORY.md  AUDIO_ENGINE_FORK.md  BACKLOG.md  DAISY_I2S_SETUP.md  ENCLOSURE.md  ESP32_SENSOR_NETWORK.md  EXHIBIT.md  GROOVEBOX_REPURPOSE.md  INSTALL_DAY.md  MODEL_NOTES.md  OPTIMIZATIONS.md  PARAMETERS.md  PI4_AUDIO_TEST_DEPLOYMENT.md  PI_KIOSK_BRINGUP.md  PI_PERFORMANCE.md  README.md  SENSOR_MAPPING.md  SYNTH_SUITE_IMPORT_PLAN.md  hardware-handoff.md  index.html  preprocess.js  run_kiosk.sh  silhouette.js  verify.js
daisy/: .gitignore  BREAKOUT.md  Cargo.toml  MULTICHANNEL_IO.md  PLAN_QSPI_BOOTLOADER.md  PLAN_TAPE_FAILURE.md  PLAN_USB_CAPTURE.md  PLAN_USB_COMPOSITE.md  README.md  TAPE_SIMULATION.md  rust-toolchain.toml
daisy/.cargo/: config.toml
daisy/crates/dsp/: Cargo.toml
daisy/crates/dsp/src/: analog_bass_drum.rs  bloom.rs  chord.rs  fm_stab.rs  freeze.rs  groove.rs  hihat.rs  lib.rs  limiter.rs  midi.rs  midi_map.rs  pain_voice.rs  sequencer.rs  spectre_filter.rs  svf.rs  timeline.rs
daisy/crates/dsp/src/tape/: chew.rs  hysteresis.rs  loss_filter.rs  mod.rs  wow_flutter.rs
daisy/crates/firmware/: Cargo.toml  memory.x
daisy/crates/firmware/src/: debug.rs  main.rs  sd.rs  temp.rs  uac_source.rs  usb_audio.rs  usb_cdc.rs
daisy/crates/host/: Cargo.toml
daisy/crates/host/src/: main.rs  tui.rs
python/: README.md  pyproject.toml  test_am312.py  test_tof.py  test_vl53l1x.py
python/ambient_kiosk/: config.py
python/ambient_kiosk/sensors/: distance.py  pir.py
server/: README.md  package-lock.json  package.json
server/src/: index.js
server/src/inputs/: daisy-position.js  mock.js
static/: 20251006_arrangement_1.pat  20251006_arrangement_1.timeline.json  index.html  tests.html
tools/: preprocess.js  verify.js
