[package]
name = "dsp"
version = "0.1.0"
edition = "2024"
description = "Audio + MIDI core for ambient-viz-daisy. no_std, runs on both Daisy and Mac."

[features]
# Both on by default — the macOS host uses them freely.
# The embedded firmware turns them off (`default-features = false`) until
# SDRAM allocation is confirmed: Reverb buffers and a 1-second PingPongDelay
# each consume hundreds of KB that don't fit in the current 504 KB AXI heap.
default = ["reverb", "stab-delay"]
reverb = []
stab-delay = []

[dependencies]
# DaisySP-equivalent no_std DSP library (reverbs, filters, delays, distortion,
# modulation, oscillators, etc.). Requires alloc — firmware crate provides a
# global allocator via embedded-alloc.
infinitedsp-core = "1.1"

# Math primitives (sinf/cosf/powf/fabsf) — sin/cos/powf aren't in core for no_std.
# Used by our DaisySP ports (SVF, analog bass drum).
libm = "0.2"

# no_std JSON parser. Used by `dsp::timeline` so the same code parses the
# ambient-viz timeline sidecars on both Mac host and Daisy firmware.
# Default features include `heapless` for fixed-size collection support.
serde-json-core = "0.6"
serde = { version = "1.0", default-features = false, features = ["derive"] }
# Must match serde-json-core 0.6.0's transitive dep — it pins heapless 0.8
# (the master branch tracks 0.9 but isn't released yet).
heapless = "0.8"
