[package]
name = "firmware"
version = "0.1.0"
edition = "2024"

[features]
# `debug-uart` (on by default) compiles the plain-text USART3 diagnostics: the
# boot log, the 1 Hz audio-health heartbeat, the ~5 s chip-temperature readout,
# and the panic-message print. Every `dbg_uart!` is a no-op without it, the UART
# is never initialised, and the panic handler just halts — so the production
# build (`--no-default-features`) carries zero debug UART traffic or code.
default = ["debug-uart"]
debug-uart = []
# `groovebox` replaces the SD-streaming exhibit pipeline with `dsp::Engine`
# driven by GrooveEvent commands over CDC serial. Boot plays a default drum
# pattern; CDC text lines are decoded as the shared groove protocol and fed
# to the engine at audio-callback time.
groovebox = []
# `freeze` (OFF by default) compiles the master "freeze" parallel send: the grain
# hold ring -> glitch tape -> return summed under the master. It's opt-in because
# we don't currently like how it sounds; without it (the default) the ring
# buffer, glitch tape, and the inbound CC24 -> freeze routing are all compiled
# out, leaving the master chain as tape -> limiter. Add `--features freeze` to a
# firmware build to bring it back.
freeze = []
# `bell` (OFF by default) compiles a high FM bell + ping-pong delay summed on
# top of the master *before* the limiter — a dry chime that sits over the
# post-tape backing track. Struck by inbound MIDI note-on. Without it the voice,
# its 0.25 s delay ring (~96 KB AXI heap), and the note-on routing compile out.
bell = []
# `voice` (OFF by default) compiles the "pain material" formant-speech utterance
# + its own reverb, summed on top of the master before the limiter (same slot as
# bell). Struck by an inbound ch2 MIDI note-on when the room empties. Without it
# the SpeechSynth, reverb (~40-50 KB AXI heap), phoneme tables, and ch2 routing
# compile out.
voice = []

[dependencies]
# No default features: disables Reverb and PingPongDelay which over-allocate for
# the 504 KB AXI heap. Re-enable individually once SDRAM allocation is mapped.
dsp = { path = "../dsp", default-features = false }

# Pinned to a git rev because crates.io 0.2.3 depends on embassy-stm32 ^0.5.0
# while master has moved to 0.6.0 — mixing them produces a `links = "embassy-time"`
# conflict at resolve time. Bump this SHA together with the embassy patch
# revs in the workspace Cargo.toml.
daisy-embassy = { git = "https://github.com/daisy-embassy/daisy-embassy", rev = "0a217111c0d47e3ad542bb729343f52dfddee415", features = ["seed_1_2"] }

embassy-executor = { version = "0.7.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "task-arena-size-32768",
] }
embassy-time = { version = "0.5.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-32_768",
    "generic-queue-8",
] }
embassy-stm32 = { version = "0.6.0", features = [
    "defmt",
    "stm32h750ib",
    "time-driver-tim5",
    "exti",
    "memory-x",
    "unstable-pac",
    "chrono",
] }
embassy-futures = "0.1.2"
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-usb = { version = "0.6.0", features = ["defmt"] }

cortex-m = { version = "0.7.7", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = { version = "0.7.0", features = ["device"] }
critical-section = "1.2.0"

defmt = "1.0.1"
defmt-rtt = "1.0.0"
# Panic handler lives in src/debug.rs (prints panics over the debug UART), so
# panic-probe is intentionally absent — there must be exactly one #[panic_handler].

static_cell = "2.1.1"

# Global allocator. dsp pulls in infinitedsp which requires `alloc`, so the
# firmware crate must provide one. LlffHeap is the simpler of embedded-alloc's
# two heap implementations — fine for our allocation pattern (a few buffers
# at startup + reverb internal state, no per-frame allocation).
embedded-alloc = "0.6"

# SD card stack. SPI mode (SDMMC peripheral isn't usable with the
# 6-pin WWZMDiB modules; see daisy/BREAKOUT.md). embedded-sdmmc + the
# embedded-hal-bus ExclusiveDevice adapter wraps a blocking SpiBus +
# CS pin into the SpiDevice that SdCard::new expects.
embedded-hal = "1.0"
embedded-hal-bus = "0.3"
embedded-sdmmc = { version = "0.9", default-features = false, features = ["defmt-log"] }

# Lock-free SPSC ring buffer between the SD reader and the audio callback.
heapless = "0.8"
